--- a/src/sections/4-AI-section/AiSection.scss
+++ b/src/sections/4-AI-section/AiSection.scss
@@ -7,7 +7,7 @@
   color: white;
   position: relative;
   padding: 0px 5vw;
-  height: 100vh;
+  min-height: 100vh;
   // width: 100%;
   // max-width: 100vw;
   overflow: hidden;
